[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0", "cmake >=3.1", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "vamp"
version = "0.2"
description = "Vector-Accelerated Motion Planner"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Zachary Kingston", email = "zak@rice.edu" },
    { name = "Wil Thomason", email = "wil.thomason@gmail.com" },
    { name = "Clayton Ramsey", email = "claytonwramsey@gmail.com" }
]
classifiers = [
    "License :: Polyform Noncommercial",
]
dependencies = ["numpy"]

[project.optional-dependencies]
examples = ["fire", "pybullet", "pyyaml", "tqdm", "pandas", "tabulate", "xmltodict"]
heightmaps = ["pillow"]

[project.urls]
Homepage = "https://github.com/KavrakiLab/vamp"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
VAMP_LTO = "ON"
# VAMP_FORCE_CLANG = "ON"


[tool.poetry]
name = "vamp"
version = "0.2"
description = "Vector-Accelerated Motion Planner"
authors = [
    "Zachary Kingston <zak@rice.edu>",
    "Wil Thomason <wil.thomason@gmail.com>",
    "Clayton Ramsey <claytonwramsey@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "<2"
fire = {version = "^0.6.0", optional = true}
pybullet = {version = "^3.2.6", optional = true}
pyyaml = {version = "^6.0.2", optional = true}
tqdm = {version = "^4.66.5", optional = true}
pandas = {version = "^2.2.2", optional = true}
tabulate = {version = "^0.9.0", optional = true}
xmltodict = {version = "^0.13.0", optional = true}
pillow = {version = "^10.4.0", optional = true}

[tool.poetry.extras]
examples = ["fire", "pybullet", "pyyaml", "tqdm", "pandas", "tabulate", "xmltodict"]
heightmaps = ["pillow"]


